Force run bench

--- a/.github/workflows/pawn-tests.yaml
+++ b/.github/workflows/pawn-tests.yaml
@@ -23,6 +23,8 @@ jobs:
       - name: Build pawn
         run: "make"
       - name: Run bench
+        run: "build/pawn bench"
+      - name: Run bench (and extract signature)
         run: "build/pawn bench 2>&1 | grep 'Nodes searched:' | awk '{print $3}' > bench.out"
       - name: Verify bench signature
         run: "cmp bench.sig bench.out"
