--- a/.github/workflows/pawn-tests.yaml
+++ b/.github/workflows/pawn-tests.yaml
@@ -1,4 +1,4 @@
-name: Pawn tests
+name: Build and test pawn
 
 on:
   push:
@@ -11,8 +11,30 @@ on:
 
 jobs:
   build:
-    name: Building and testing pawn
-    runs-on: ubuntu-latest
+    name: ${{ matrix.config.name }}
+    runs-on: ${{ matrix.config.os }}
+    env:
+      CC: ${{ matrix.config.cc }}
+      CXX: ${{ matrix.config.cxx }}
+    strategy:
+      matrix:
+        config:
+          - name: "Ubuntu Latest - GCC"
+            os: ubuntu-latest
+            cc: gcc
+            cxx: g++
+          - name: "Ubuntu Latest - Clang"
+            os: ubuntu-latest
+            cc: clang
+            cxx: clang++
+          - name: "Ubuntu 20.04 - GCC"
+            os: ubuntu-20.04
+            cc: gcc
+            cxx: g++
+          - name: "Ubuntu 20.04 - Clang"
+            os: ubuntu-20.04
+            cc: clang
+            cxx: clang++
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
