--- a/.github/workflows/pawn-tests.yaml
+++ b/.github/workflows/pawn-tests.yaml
@@ -23,23 +23,53 @@ jobs:
             os: ubuntu-latest
             cc: gcc
             cxx: g++
+            shell: bash
           - name: "Ubuntu Latest - Clang"
             os: ubuntu-latest
             cc: clang
             cxx: clang++
+            shell: bash
           - name: "Ubuntu 20.04 - GCC"
             os: ubuntu-20.04
             cc: gcc
             cxx: g++
+            shell: bash
           - name: "Ubuntu 20.04 - Clang"
             os: ubuntu-20.04
             cc: clang
             cxx: clang++
+            shell: bash
+          - name: "MacOS - GCC 11"
+            os: macos-latest
+            cc: gcc-11
+            cxx: g++-11
+            shell: bash
+          - name: "MacOS - Clang"
+            os: macos-latest
+            cc: clang
+            cxx: clang++
+            shell: bash
+          - name: "Windows 2022 - GCC"
+            os: windows-2022
+            cc: gcc
+            cxx: g++
+            sys: mingw64
+            env: x86_64
+            shell: msys2 {0}
+    defaults:
+      run:
+        shell: ${{ matrix.config.shell }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Prepare Windows with MSYS2
+        if: runner.os == 'Windows'
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: ${{matrix.config.sys}}
+          install: make git mingw-w64-${{matrix.config.env}}
       - name: Extract bench signature
         run: "git log HEAD | grep 'Bench: ' | head -n 1 | awk '{print $2}' > bench.sig"
       - name: Build pawn
