--- a/.github/workflows/pawn-tests.yaml
+++ b/.github/workflows/pawn-tests.yaml
@@ -54,14 +54,14 @@ jobs:
             cc: gcc
             cxx: g++
             sys: mingw64
-            env_comp: x86_64-gcc
+            packages: mingw-w64-x86_64-gcc
             shell: msys2 {0}
           - name: "Windows 2022 - Clang"
             os: windows-2022
             cc: clang
             cxx: clang++
             sys: mingw64
-            env_comp: x86_64-clang
+            packages: mingw-w64-x86_64-clang mingw-w64-x86_64-lld
             shell: msys2 {0}
     defaults:
       run:
@@ -76,7 +76,7 @@ jobs:
         uses: msys2/setup-msys2@v2
         with:
           msystem: ${{matrix.config.sys}}
-          install: make git mingw-w64-${{matrix.config.env_comp}} diffutils
+          install: make git diffutils ${{matrix.config.packages}}
       - name: Extract bench signature
         run: "git log HEAD | grep 'Bench: ' | head -n 1 | awk '{print $2}' > bench.sig"
       - name: Build pawn
