--- a/.github/workflows/pawn-tests.yaml
+++ b/.github/workflows/pawn-tests.yaml
@@ -14,6 +14,7 @@ jobs:
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
     env:
+      BIN_NAME: ${{ matrix.config.bin_name }}
       CC: ${{ matrix.config.cc }}
       CXX: ${{ matrix.config.cxx }}
     strategy:
@@ -25,31 +26,37 @@ jobs:
             cc: gcc
             cxx: g++
             shell: bash
+            bin_name: pawn
           - name: "Ubuntu Latest - Clang"
             os: ubuntu-latest
             cc: clang
             cxx: clang++
             shell: bash
+            bin_name: pawn
           - name: "Ubuntu 20.04 - GCC"
             os: ubuntu-20.04
             cc: gcc
             cxx: g++
             shell: bash
+            bin_name: pawn
           - name: "Ubuntu 20.04 - Clang"
             os: ubuntu-20.04
             cc: clang
             cxx: clang++
             shell: bash
+            bin_name: pawn
           - name: "MacOS - GCC 11"
             os: macos-latest
             cc: gcc-11
             cxx: g++-11
             shell: bash
+            bin_name: pawn
           - name: "MacOS - Clang"
             os: macos-latest
             cc: clang
             cxx: clang++
             shell: bash
+            bin_name: pawn
           - name: "Windows 2022 - GCC"
             os: windows-2022
             cc: gcc
@@ -57,6 +64,7 @@ jobs:
             sys: mingw64
             packages: mingw-w64-x86_64-gcc
             shell: msys2 {0}
+            bin_name: pawn.exe
           - name: "Windows 2022 - Clang"
             os: windows-2022
             cc: clang
@@ -64,6 +72,7 @@ jobs:
             sys: mingw64
             packages: mingw-w64-x86_64-clang mingw-w64-x86_64-lld
             shell: msys2 {0}
+            bin_name: pawn.exe
     defaults:
       run:
         shell: ${{ matrix.config.shell }}
@@ -84,7 +93,7 @@ jobs:
         run: "make"
       - name: Run bench
         run: |
-          build/pawn bench > bench.out 2>&1
+          $BIN_NAME bench > bench.out 2>&1
           cat bench.out
       - name: Extract and verify bench signature
         run: |
@@ -92,6 +101,6 @@ jobs:
           cmp bench.sig bench.sig
       - name: Run tests
         run: |
-          build/pawn test > test.out
+          $BIN_NAME test > test.out
           cat test.out
           grep -q 'All tests passed' test.out
