--- a/.github/workflows/pawn-tests.yaml
+++ b/.github/workflows/pawn-tests.yaml
@@ -26,37 +26,37 @@ jobs:
             cc: gcc
             cxx: g++
             shell: bash
-            bin_name: pawn
+            bin_name: build/pawn
           - name: "Ubuntu Latest - Clang"
             os: ubuntu-latest
             cc: clang
             cxx: clang++
             shell: bash
-            bin_name: pawn
+            bin_name: build/pawn
           - name: "Ubuntu 20.04 - GCC"
             os: ubuntu-20.04
             cc: gcc
             cxx: g++
             shell: bash
-            bin_name: pawn
+            bin_name: build/pawn
           - name: "Ubuntu 20.04 - Clang"
             os: ubuntu-20.04
             cc: clang
             cxx: clang++
             shell: bash
-            bin_name: pawn
+            bin_name: build/pawn
           - name: "MacOS - GCC 11"
             os: macos-latest
             cc: gcc-11
             cxx: g++-11
             shell: bash
-            bin_name: pawn
+            bin_name: build/pawn
           - name: "MacOS - Clang"
             os: macos-latest
             cc: clang
             cxx: clang++
             shell: bash
-            bin_name: pawn
+            bin_name: build/pawn
           - name: "Windows 2022 - GCC"
             os: windows-2022
             cc: gcc
@@ -64,7 +64,7 @@ jobs:
             sys: mingw64
             packages: mingw-w64-x86_64-gcc
             shell: msys2 {0}
-            bin_name: pawn.exe
+            bin_name: build/pawn.exe
           - name: "Windows 2022 - Clang"
             os: windows-2022
             cc: clang
@@ -72,7 +72,7 @@ jobs:
             sys: mingw64
             packages: mingw-w64-x86_64-clang mingw-w64-x86_64-lld
             shell: msys2 {0}
-            bin_name: pawn.exe
+            bin_name: build/pawn.exe
     defaults:
       run:
         shell: ${{ matrix.config.shell }}
