WIP: some debug prints

--- a/.github/workflows/pawn-tests.yaml
+++ b/.github/workflows/pawn-tests.yaml
@@ -21,42 +21,42 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - name: "Ubuntu Latest - GCC"
-            os: ubuntu-latest
-            cc: gcc
-            cxx: g++
-            shell: bash
-            bin_name: build/pawn
-          - name: "Ubuntu Latest - Clang"
-            os: ubuntu-latest
-            cc: clang
-            cxx: clang++
-            shell: bash
-            bin_name: build/pawn
-          - name: "Ubuntu 20.04 - GCC"
-            os: ubuntu-20.04
-            cc: gcc
-            cxx: g++
-            shell: bash
-            bin_name: build/pawn
-          - name: "Ubuntu 20.04 - Clang"
-            os: ubuntu-20.04
-            cc: clang
-            cxx: clang++
-            shell: bash
-            bin_name: build/pawn
-          - name: "MacOS - GCC 11"
-            os: macos-latest
-            cc: gcc-11
-            cxx: g++-11
-            shell: bash
-            bin_name: build/pawn
-          - name: "MacOS - Clang"
-            os: macos-latest
-            cc: clang
-            cxx: clang++
-            shell: bash
-            bin_name: build/pawn
+          # - name: "Ubuntu Latest - GCC"
+          #   os: ubuntu-latest
+          #   cc: gcc
+          #   cxx: g++
+          #   shell: bash
+          #   bin_name: build/pawn
+          # - name: "Ubuntu Latest - Clang"
+          #   os: ubuntu-latest
+          #   cc: clang
+          #   cxx: clang++
+          #   shell: bash
+          #   bin_name: build/pawn
+          # - name: "Ubuntu 20.04 - GCC"
+          #   os: ubuntu-20.04
+          #   cc: gcc
+          #   cxx: g++
+          #   shell: bash
+          #   bin_name: build/pawn
+          # - name: "Ubuntu 20.04 - Clang"
+          #   os: ubuntu-20.04
+          #   cc: clang
+          #   cxx: clang++
+          #   shell: bash
+          #   bin_name: build/pawn
+          # - name: "MacOS - GCC 11"
+          #   os: macos-latest
+          #   cc: gcc-11
+          #   cxx: g++-11
+          #   shell: bash
+          #   bin_name: build/pawn
+          # - name: "MacOS - Clang"
+          #   os: macos-latest
+          #   cc: clang
+          #   cxx: clang++
+          #   shell: bash
+          #   bin_name: build/pawn
           - name: "Windows 2022 - GCC"
             os: windows-2022
             cc: gcc
@@ -93,6 +93,8 @@ jobs:
         run: "make"
       - name: Run bench
         run: |
+          ls -l 
+          ls -l build
           $BIN_NAME bench > bench.out 2>&1
           cat bench.out
       - name: Extract and verify bench signature
@@ -101,6 +103,8 @@ jobs:
           cmp bench.sig bench.sig
       - name: Run tests
         run: |
+          ls -l 
+          ls -l build
           $BIN_NAME test > test.out
           cat test.out
           grep -q 'All tests passed' test.out
