--- a/.github/workflows/pawn-tests.yaml
+++ b/.github/workflows/pawn-tests.yaml
@@ -30,20 +30,20 @@ jobs:
             cc: clang
             cxx: clang++
             shell: bash
-          - name: "Ubuntu 20.04 - GCC"
-            os: ubuntu-20.04
+          - name: "Ubuntu 22.04 - GCC"
+            os: ubuntu-22.04
             cc: gcc
             cxx: g++
             shell: bash
-          - name: "Ubuntu 20.04 - Clang"
-            os: ubuntu-20.04
+          - name: "Ubuntu 22.04 - Clang"
+            os: ubuntu-22.04
             cc: clang
             cxx: clang++
             shell: bash
-          - name: "MacOS - GCC 11"
+          - name: "MacOS - GCC"
             os: macos-latest
-            cc: gcc-11
-            cxx: g++-11
+            cc: gcc
+            cxx: g++
             shell: bash
           - name: "MacOS - Clang"
             os: macos-latest
